updates env example file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,21 @@
+# =============================================================================
+# Environment URLs — set these per branch/deployment
+# =============================================================================
+#
+# main (production):
+#   NEXT_PUBLIC_APP_URL=https://www.socialmediaplatform.online
+#   NEXT_PUBLIC_API_URL=https://api.socialmediaplatform.online
+#   Login: https://www.socialmediaplatform.online/login
+#
+# develop:
+#   NEXT_PUBLIC_APP_URL=https://dev.socialmediaplatform.online
+#   NEXT_PUBLIC_API_URL=https://api.dev.socialmediaplatform.online
+#   Login: https://dev.socialmediaplatform.online/login
+#
+# =============================================================================
+
+# Frontend app base URL (no trailing slash). Optional; use for absolute redirects, links, etc.
+NEXT_PUBLIC_APP_URL=https://www.socialmediaplatform.online
+
 # Backend API base URL (no trailing slash). Used by lib/api/client.ts
 NEXT_PUBLIC_API_URL=https://api.socialmediaplatform.online
